<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="609dp"
        android:text="@string/FromText"/>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="190dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="509dp"
        android:contentDescription="@string/EnterTheValueText"
        android:minHeight="48dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="509dp"
        android:text="@string/ToText"/>

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="190dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="509dp"
        android:contentDescription="@string/EnterTheValueText"
        android:minHeight="48dp"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:layout_width="89dp"
        android:layout_height="31dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="262dp"
        android:layout_marginEnd="253dp"
        android:layout_marginBottom="437dp"
        android:text="@string/valueText"/>

    <EditText
        android:id="@+id/editTextEnterTheValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="190dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="437dp"
        android:hint="@string/EnterTheValueText"
        android:minHeight="48dp"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
        android:autofillHints=""/>

    <Button
        android:id="@+id/buttonConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="337dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="352dp"
        android:gravity="center"
        android:text="@string/ConvertText"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="437dp"
        android:gravity="center" />

</RelativeLayout>